<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:progressTint="@color/primary"
            android:layout_gravity="center" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:background="@color/black">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:id="@+id/buttonBack"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="0.3"
                        android:drawableLeft="@drawable/ic_arrow_left"
                        android:drawablePadding="2dp"
                        android:fontFamily="@font/gilroy_medium"
                        android:gravity="start|center_vertical"
                        android:text="@string/search"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        tools:ignore="UseCompatTextViewDrawableXml" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0.4"
                        android:fontFamily="@font/gilroy_medium"
                        android:gravity="center"
                        android:text="@string/filter"
                        android:textColor="?attr/colorPrimary"
                        android:textFontWeight="700"
                        android:textSize="24sp"
                        tools:ignore="UnusedAttribute"
                        tools:textColor="@color/primary" />

                    <TextView
                        android:id="@+id/buttonReset"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="0.3"
                        android:fontFamily="@font/gilroy_medium"
                        android:gravity="end|center_vertical"
                        android:text="@string/reset"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        tools:ignore="UseCompatTextViewDrawableXml" />
                </LinearLayout>

                <com.sb.moovich.core.views.TypeChooserView
                    android:id="@+id/typeChooser"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/tab_layout_background"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    app:tabTextAppearance="@style/CustomTabTextAppearance">

                    <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/all" />

                    <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movies" />

                    <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/series" />

                    <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cartoons" />
                </com.sb.moovich.core.views.TypeChooserView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/gilroy_medium"
                    android:text="@string/sort_by"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:scrollbars="none">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/sortByPopularity"
                            android:layout_width="160dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:background="@drawable/sort_back_shape"
                            android:fontFamily="@font/gilroy_medium"
                            android:gravity="center"
                            android:text="@string/popularity"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/sortByLatest"
                            android:layout_width="160dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:background="@drawable/sort_back_shape"
                            android:fontFamily="@font/gilroy_medium"
                            android:gravity="center"
                            android:text="@string/latest_release"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/sortByRating"
                            android:layout_width="160dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="20dp"
                            android:background="@drawable/sort_back_shape"
                            android:fontFamily="@font/gilroy_medium"
                            android:gravity="center"
                            android:text="@string/rating"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="16sp" />
                    </LinearLayout>
                </HorizontalScrollView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@font/gilroy_medium"
                    android:text="@string/genre"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/genreRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="40dp"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="2"
                    tools:listitem="@layout/item_genre_checkable" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@font/gilroy_medium"
                    android:text="@string/year"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/startYearTextView"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="0"
                        android:fontFamily="@font/gilroy"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        tools:text="1937" />

                    <com.google.android.material.slider.RangeSlider
                        android:id="@+id/rangeYearSlider"
                        style="@style/CustomSliderTheme"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/endYearTextView"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="0"
                        android:fontFamily="@font/gilroy"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        tools:text="2024" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@font/gilroy_medium"
                    android:text="@string/rating"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/startRatingTextView"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="0"
                        android:fontFamily="@font/gilroy"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        tools:text="0" />

                    <com.google.android.material.slider.RangeSlider
                        android:id="@+id/rangeRatingSlider"
                        style="@style/CustomSliderTheme"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/endRatingTextView"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="0"
                        android:fontFamily="@font/gilroy"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        tools:text="10" />
                </LinearLayout>

                <com.sb.moovich.core.views.CustomSpinner
                    android:id="@+id/countrySpinner"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="32dp"
                    android:dropDownWidth="match_parent"
                    android:orientation="horizontal"
                    android:paddingHorizontal="14dp">

                    <TextView
                        android:id="@+id/countryTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:fontFamily="@font/gilroy_medium"
                        android:lines="1"
                        android:text="@string/country"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/selectedCountryTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="4dp"
                        android:fontFamily="@font/gilroy_medium"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        tools:text="All"

                        />

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center_vertical"
                        android:importantForAccessibility="no"
                        android:rotation="270"
                        app:srcCompat="@drawable/ic_spinner_drop" />

                </com.sb.moovich.core.views.CustomSpinner>

                <androidx.cardview.widget.CardView
                    android:id="@+id/applyButton"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="32dp"
                    app:cardBackgroundColor="@color/primary"
                    app:cardCornerRadius="20dp">

                    <TextView
                        android:id="@+id/applyTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/gilroy_semibold"
                        android:text="@string/apply_filters"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                </androidx.cardview.widget.CardView>


            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </FrameLayout>
</layout>
